--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,11 +1,7 @@
-.hero {
-    background-image: url('../Images/financialgraph.jpg');
-    background-repeat: no-repeat;
-    
-}
+
 .team {
 text-align: center;
-display: inline-flex;
+display: flex;
 color: rgb(243, 74, 235);
 background-color: rgb(12, 11, 11);
 border-radius: 10px;
