--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -13,3 +13,8 @@ border: 3px solid whitesmoke;
 padding: 3px;
 margin: 2px;
 }
+
+#youtube-video {
+    max-height: 500px;
+    overflow: scroll;
+}
