--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,11 +1,25 @@
 
 .team {
 text-align: center;
-display: flex;
+justify-content: space-around;
 color: rgb(243, 74, 235);
 background-color: rgb(12, 11, 11);
 border-radius: 10px;
 border: 3px solid whitesmoke;
 padding: 3px;
 margin: 2px;
+}
+
+#banner {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+}
+
+#banner img {
+    width: 128px;
+}
+
+#banner h1 {
+    margin: 2 0 0 ;
 }
