--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -12,11 +12,7 @@ margin: 2px;
 #wiki-icon {
     height: auto;
     max-width: 85px;
-}
-
-#wiki-icon {
-    height: auto;
-    max-width: 85px;
+    width: 100px;
 }
 
 
