--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,4 +1,6 @@
-
+html, body {
+    min-height: 100%;
+}
 .team {
 text-align: center;
 justify-content: space-around;
@@ -9,6 +11,24 @@ border: 3px solid whitesmoke;
 padding: 3px;
 margin: 2px;
 }
+
+#search-btn {
+    border-radius: 5px;
+    justify-content: space-around;
+}
+
+#clear-btn {
+    border-radius: 5px;
+    justify-content: space-around;
+}
+
+.galaxy {
+    max-width: 100vw;
+    height: 250px;
+    object-fit: cover;
+    opacity: .3;
+}
+
 #wiki-icon {
     height: auto;
     max-width: 85px;
@@ -20,18 +40,17 @@ margin: 2px;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-around;
+    
 }
 
 #banner img {
     width: 128px;
-}
-
-#banner h1 {
-    margin: 2 0 0 ;
+    margin: 2px;
+    padding: 5px;
 }
 
 #youtube-video {
-    max-height: 500px;
+    width: 50vw;
     overflow: scroll;
 }
 
