--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,6 +1,10 @@
 html, body {
     min-height: 100%;
 }
+
+.hero-body {
+    background: url(/Assets/Images/outerspace.gif);
+}
 .team {
 text-align: center;
 justify-content: space-around;
@@ -9,9 +13,13 @@ background-color: rgb(12, 11, 11);
 border-radius: 10px;
 border: 3px solid whitesmoke;
 padding: 3px;
-margin: 2px;
+margin: 10px;
+width: 100px;
 }
 
+.container1 {
+    margin-left: 160px;
+}
 #search-btn {
     border-radius: 5px;
     justify-content: space-around;
@@ -26,7 +34,7 @@ margin: 2px;
     max-width: 100vw;
     height: 250px;
     object-fit: cover;
-    opacity: .3;
+    opacity: .5;
 }
 
 #wiki-icon {
@@ -37,7 +45,8 @@ margin: 2px;
 
 
 #banner {
-    display: flex;
+    position: relative;
+    display: inline-flex;
     flex-direction: row-reverse;
     justify-content: space-around;
     
@@ -50,7 +59,13 @@ margin: 2px;
 }
 
 #youtube-video {
-    width: 50vw;
+    justify-content: space-evenly;
+    object-fit: cover;
+    overflow-y: scroll;
+}
+
+.card-content {
     overflow: scroll;
 }
+
 
