--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,3 +1,4 @@
+
 html, body {
     min-height: 100%;
 }
@@ -20,29 +21,34 @@ width: 100px;
 .container1 {
     margin-left: 160px;
 }
+
 #search-btn {
     border-radius: 5px;
     justify-content: space-around;
+    margin: 5px;
+    width: 80px;
 }
 
 #clear-btn {
     border-radius: 5px;
     justify-content: space-around;
+    padding: 5px;
+    margin: 5px;
 }
 
 .galaxy {
     max-width: 100vw;
     height: 250px;
     object-fit: cover;
-    opacity: .5;
+    opacity: .8;
 }
+
 
 #wiki-icon {
     height: auto;
     max-width: 85px;
     width: 100px;
 }
-
 
 #banner {
     position: relative;
@@ -56,6 +62,7 @@ width: 100px;
     width: 128px;
     margin: 2px;
     padding: 5px;
+    justify-content: space-between;
 }
 
 #youtube-video {
@@ -64,8 +71,8 @@ width: 100px;
     overflow-y: scroll;
 }
 
-.card-content {
-    overflow: scroll;
+.history-btns {
+    justify-content: space-between;
 }
 
 
