--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -8,31 +8,27 @@ html, body {
     background-image: url(/Assets/Images/outerspace.gif);
     background-repeat: repeat;
     background-size: contain;
+    opacity: .9;
 }
 
 .container2 {
     background-image: url(/Assets/Images/neon.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.team {
-text-align: justify;
-justify-content: space-around;
-color: rgb(243, 74, 235);
-background-color: rgb(12, 11, 11);
-border-radius: 10px;
-border: 3px solid whitesmoke;
-padding: 5px;
-margin: 5px;
-width: 90px;
-z-index:auto;
+    opacity: .8;
 }
 
 .container1 {
-    margin-left: 160px;
+    margin-left: 750px;
+    justify-content: center;
 }
 
+.team-logo {
+    justify-content: center;
+    width: 500px;
+    max-width: 100vw;
+    margin-left: 550px;
+}
 #search-btn {
     border-radius: 5px;
     justify-content: space-around;
@@ -45,13 +41,6 @@ z-index:auto;
     justify-content: space-around;
     padding: 5px;
     margin: 5px;
-}
-
-.galaxy {
-    max-width: 100vw;
-    height: 250px;
-    object-fit: cover;
-    opacity: .8;
 }
 
 .center {
@@ -92,7 +81,7 @@ z-index:auto;
 }
 
 .history-btns {
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
     
